codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__multi_agents__tests__ascii_control.snap
---
source: tui_app_server/src/multi_agents.rs
expression: rendered
---
• Finished waiting
  └ Atlas [worker]: Completed
      Replaying the preview path with ASCII control text.
      Keep `S2` and `N/A` intact while preserving `/tmp/session-router/auth`.
