codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__multi_agents__tests__collab_agent_transcript.snap
---
source: tui_app_server/src/multi_agents.rs
expression: snapshot
---
• Spawned Robie [explorer] (gpt-5 high)
  └ Compute 11! and reply with just the integer result.

• Sent input to Robie [explorer]
  └ Please continue and return the answer only.

• Waiting for Robie [explorer]

• Finished waiting
  └ Robie [explorer]: Completed
      39916800
    Bob [worker]: Error
      tool timeout

• Closed Robie [explorer]
