codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__multi_agents__tests__negation_and_paths.snap
---
source: tui_app_server/src/multi_agents.rs
expression: rendered
---
• Finished waiting
  └ Atlas [worker]: Completed
      Да, это уже реальный blocker.
      Лог menubar app теперь такой:
      auth pool at `/Users/palvaleri/codex-session-router/var/auth` contains no valid profiles
