codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__multi_agents__tests__waiting_end_preserves_multiline_completed_messages.snap
---
source: tui_app_server/src/multi_agents.rs
expression: cell_to_text(&cell)
---
• Finished waiting
  └ Atlas [worker]: Completed
      Вношу две узкие правки в tooling docs: уточняю исключение для `Architect initial draft` и добавляю owner-facing инструкцию по `racex_plan_bundle`.
      Mirror-патч не прошёл через `apply_patch`; tooling-файл отдельно дожму сейчас, а для sibling mirror, если понадобится, пойду через явное разрешение на один безопасный sync-патч.
